// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/paperbase/LanguageDialog LanguageDialog (isOpen false) should render 1`] = `
Array [
  <div
    className="OpenButton"
  >
    <div
      className="onClick"
    >
      saveIsOpen(true)
    </div>
    <div
      className="label"
    >
      currentTranslation.openButtonLabel
    </div>
  </div>,
  <div
    className="Dialog"
  >
    <div
      className="isOpen"
    >
      false
    </div>
    <div
      className="onClose"
    >
      saveIsOpen(false)
    </div>
    <div
      className="children"
    >
      <div
        className="Title"
      >
        currentTranslation.title
      </div>
      <div
        className="Content"
      >
        <div
          className="ListItem"
        >
          <div
            className="activeLabel"
          >
            currentTranslation.activeLinkLabel
          </div>
          <div
            className="text"
          >
            English
          </div>
        </div>
        <div
          className="ListItemLink"
        >
          <div
            className="to"
          >
            {"pathname":"/es"}
          </div>
          <div
            className="onClick"
          >
            saveIsOpen(false)
          </div>
          <div
            className="id"
          >
            translate-to-es
          </div>
          <div
            className="text"
          >
            Spanish
          </div>
        </div>
      </div>
      <div
        className="Actions"
      >
        <div
          className="onClose"
        >
          saveIsOpen(false)
        </div>
        <div
          className="closeButtonText"
        >
          currentTranslation.closeButtonText
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`lib/paperbase/LanguageDialog LanguageDialog (isOpen true) should render 1`] = `
Array [
  <div
    className="OpenButton"
  >
    <div
      className="onClick"
    >
      saveIsOpen(true)
    </div>
    <div
      className="label"
    >
      currentTranslation.openButtonLabel
    </div>
  </div>,
  <div
    className="Dialog"
  >
    <div
      className="isOpen"
    >
      true
    </div>
    <div
      className="onClose"
    >
      saveIsOpen(false)
    </div>
    <div
      className="children"
    >
      <div
        className="Title"
      >
        currentTranslation.title
      </div>
      <div
        className="Content"
      >
        <div
          className="ListItem"
        >
          <div
            className="activeLabel"
          >
            currentTranslation.activeLinkLabel
          </div>
          <div
            className="text"
          >
            English
          </div>
        </div>
        <div
          className="ListItemLink"
        >
          <div
            className="to"
          >
            {"pathname":"/es"}
          </div>
          <div
            className="onClick"
          >
            saveIsOpen(false)
          </div>
          <div
            className="id"
          >
            translate-to-es
          </div>
          <div
            className="text"
          >
            Spanish
          </div>
        </div>
      </div>
      <div
        className="Actions"
      >
        <div
          className="onClose"
        >
          saveIsOpen(false)
        </div>
        <div
          className="closeButtonText"
        >
          currentTranslation.closeButtonText
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`lib/paperbase/LanguageDialog should use the right dependency versions 1`] = `
Object {
  "prop-types": "^15.7.2",
  "react": "^16.10.1",
}
`;
